new changes performed

--- a/app1.html
+++ b/app1.html
@@ -10,7 +10,7 @@
 
 <body>
     <h3>Hello world! Creating new hml file.</h3>
-    <h4>changes are made...</h4>
+    <h4>changes are to be made</h4>
 
 </body>
 
