--- a/app1.html
+++ b/app1.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <link rel="stylesheet" href="./style.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
-    <h3>Hello People!creating a new change.</h3>
-    <h4>changes are made...</h4>
-
-</body>
-
+  <body bgcolor="black">
+    <div class="container">
+      <h3>Hello People!creating a new change.</h3>
+      <h4>changes are made...</h4>
+    </div>
+  </body>
 </html>
